fix: fixing some spacing

--- a/src/styles/sass/pages/LandingPage/_landingPage.scss
+++ b/src/styles/sass/pages/LandingPage/_landingPage.scss
@@ -1,5 +1,5 @@
 .landingContainer {
-    padding: 100px 194px;
+    padding: 100px 194px 0px 194px;
     align-items: center;
     justify-content: center;
 }
@@ -143,24 +143,18 @@
     }
 
 
-    .lowerHero {
-        margin-top: 107px;
-    }
 
-    .StackCardBlock {
-        margin-top: 0px;
-        transform: scale(0.72);
-
-    }
-
-
-}
-
-
-@media (max-width: 900px ) {
     .lowerHero {
         flex-direction: column-reverse;
         gap: 0;
+        margin-top: 107px;
+    }
+
+
+    .StackCardBlock {
+        margin-top: 80px;
+
+
     }
 
 }
